Tweaks to Intro & Conclusion.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -69,7 +69,7 @@ It is here in the story of alternate realities that this thesis enters. Taking o
 
 \section{Objectives and Methodology}
 
-The design and development of a new category of alternate reality required thorough theoretical comprehension and understanding of existing categories of alternate reality. However to ascertain the worth of a new alternate reality it was all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be anything to base evaluation upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality required that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
+The design and development of a new alternate reality concept required thorough theoretical comprehension and understanding of existing categories of alternate reality. However to ascertain the worth of a new alternate reality it was all but imperative that it be explored through instantiation, with real world deployment to study users' behaviour, reactions and performance. It is a fundamental tenet of alternate reality experience that somebody actually \textit{have} that experience in order for there to be something to base evaluation upon. While predictions and educated extrapolations can be made about the nature of such an experience, through study of the results and observations of previous scenarios that explored existing categories of alternate reality, an involved assessment of a new alternate reality required that it be deployed in the real world and not remain contained to thought experiment or theoretical postulation.
 
 \begin{quote}
 	\textit{``There are circumstances where the best or only way to shed light on a proposition, a principle, a material, a process or a function is to attempt to construct something, or to enact something, calculated to explore, embody or test it.''}~\cite{Archer1995}
@@ -77,11 +77,11 @@ The design and development of a new category of alternate reality required thoro
 
 %Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''} was missing from these systems.
 
-The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and the development of the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
+The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and created the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
 
 The \textit{worth} of the parallel reality concept, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection and subsequent evaluation of empirical evidence.
 
-Initially the Virtual Time Window platform, discussed in chapter \ref{chapter-vtw}, was developed in order to explore the potential suitability of an existing alternate reality modality of interaction to serve as a platform for investigation into parallel reality experience. After the experiential aspect of the Virtual Time Window did not fully meet with the vision of the parallel reality concept, the Mirrorshades platform, discussed in chapter \ref{chapter-mirrorshades}, was developed in order to fully realise the ideals of the paradigm via a new modality of alternate reality interaction.
+Initially the Virtual Time Window platform, discussed in chapter \ref{chapter-vtw}, was developed in order to explore the potential suitability of an existing alternate reality modality of interaction to serve as a platform for investigation into parallel reality experience. When the experiential aspect of the Virtual Time Window did not fully meet with the vision of the parallel reality concept, the Mirrorshades platform, discussed in chapter \ref{chapter-mirrorshades}, was developed in order to fully realise the ideals of the concept via a new modality of alternate reality interaction.
 
 %needs to mention that seated VR is a style of interaction that would be used in the scenario
 %and that parallel reality allows exploration of the same content, for the same goal, but in a different manner
@@ -115,7 +115,7 @@ While the work presented in this thesis was undertaken principally by myself, it
 
 %=====================
 
-Co-authored peer reviewed papers that cover the process of creation and utilisation of the cathedral and chapel reconstructions used in chapters \ref{chapter-vtw}, \ref{chapter-mirrorshades}, \ref{chapter-eval-1} and \ref{chapter-eval-2} include:
+Co-authored peer reviewed papers that cover the process of creation and utilisation of the cathedral and chapel reconstructions (used in chapters \ref{chapter-vtw}, \ref{chapter-mirrorshades}, \ref{chapter-eval-1} and \ref{chapter-eval-2}) include:
 
 \begin{itemize}
 
