--- a/thesis.tex
+++ b/thesis.tex
@@ -239,7 +239,6 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-%\chapter{Mirrorshades - Evaluation}
 \chapter{Evaluation: Merit of Parallel Reality}
 \graphicspath{ {06_mirrorshades_studies_results/images/} }
 \input{06_mirrorshades_studies_results/mirrorshades_studies_results.tex}
@@ -252,7 +251,7 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-%\chapter*{Appendices}
+\chapter*{Appendices}
 
 \addcontentsline{toc}{chapter}{Appendices}
 
