Rewriting introdution & summary sections for all chapters.

--- a/00_abstract/abstract.tex
+++ b/00_abstract/abstract.tex
@@ -1,3 +1,3 @@
-Alternate realities have fascinated mankind since early prehistory and with the advent of the computer and the smartphone we have seen the rise of many different categories of alternate reality that replace, augment, diminish, mix with or ultimately replace our familiar real world in order to expand our capabilities and our understanding. This thesis presents parallel reality as a new category of alternate reality which further addresses the vacancy problem that manifests in many previously explored alternate realities. Parallel reality comprises two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them. Parallel reality is framed within the larger ecosystem of previously explored alternate realities through a thorough review of existing categorisation techniques and taxonomies, leading to the update of several models and the introduction of the combined Milgram/Waterworth model for visualising experience in alternate reality systems.
+Alternate realities have fascinated mankind since early prehistory and with the advent of the computer and the smartphone we have seen the rise of many different categories of alternate reality that seek to replace, augment, diminish, mix with or ultimately replace our familiar real world in order to expand our capabilities and our understanding. This thesis presents parallel reality as a new category of alternate reality which further addresses the vacancy problem that manifests in many previous alternate reality experiences. Parallel reality comprises two environments, one real and the other virtual, each complete unto itself and wherein the user may freely switch between them. Parallel reality is framed within the larger ecosystem of previously explored alternate realities through a thorough review of existing categorisation techniques and taxonomies, leading to the update of several models and the introduction of the combined Milgram/Waterworth model for visualising experience in alternate reality systems.
 
-The development of a full parallel reality implementation called Mirrorshades is presented, combining the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning system of IndoorAtlas. Users are thus granted the ability to walk through their real environment and to at any point switch their view to the equivalent vantage point within an immersive virtual environment. The benefits that such a system provides by granting users the ability to overcome the vacancy problem and explore parallel real and virtual environments in tandem is experimentally shown through application to a use case within the realm of cultural heritage at a 15th century chapel. Evaluation of these user studies leads to the establishment of a number of best practices for future parallel reality endeavours.
+The development of a full parallel reality implementation called Mirrorshades is presented, combining the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning system of IndoorAtlas. Users are thereby granted the ability to walk through their real environment and to at any point switch their view to the equivalent vantage point within an immersive virtual environment. The benefits that such a system provides by granting users the ability to overcome the vacancy problem and explore parallel real and virtual environments in tandem is experimentally shown through application to a use case within the realm of cultural heritage at a 15th century chapel. Evaluation of these user studies leads to the establishment of a number of best practices for future parallel reality endeavours.
