--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -77,7 +77,7 @@ The design and development of a new alternate reality concept required thorough 
 
 %Parallel reality aims to further address the vacancy problem, originally coined by Joshua Lifton, by allowing users to switch freely between equivalent vantage points in two complete environments, one real and the other virtual. While the cross reality systems developed by Lifton succeeded in addressing the `absence' of a person from one environment while participating in the other by introducing changes into one environment based upon triggers in the other, the ability to visually engage with both environments in the true sense of being \textit{``in more than one place (reality) at a time''} was missing from these systems.
 
-The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and created the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
+The approach taken by this body of research was first to develop a well defined taxonomy of existing alternate reality definitions, in order to correctly situate the new category of parallel reality against them and to inform its design and implementation from the findings and adopted best practices produced by prior alternate reality investigation. This process, which is covered by chapter \ref{chapter-background}, involved effecting updates to several previously established models and creating the combined Milgram/Waterworth model to sufficiently illustrate and understand the experiential aspect of the proposed parallel reality concept.
 
 The \textit{worth} of the parallel reality concept, however, could not be assessed through such purely theoretical means. While one could have postulated as to the experiential aspects of such a system and how they would manifest during particular tasks and scenarios, it was only through actual creation and application of a parallel reality platform that such postulations could be corroborated or refuted. Thus after the establishment of a strong theoretical foundation of alternate reality taxonomy and experience, an approach of practice-based research, specifically `research through practice'~\cite{Chynoweth2014}, was adopted in order to develop a parallel reality system which could be applied to real world user studies to allow collection and subsequent evaluation of empirical evidence.
 
@@ -197,7 +197,7 @@ The contributions of this thesis can be summarized as follows:
 
 \section{Document Overview}
 
-Chapter \ref{chapter-background} surveys the ecosystem of alternate realities, including methods and taxonomies for classifying, categorising and distinguishing between different alternate reality terms, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-background} also introduces the combined Milgram/Waterworth model for illustrating parallel reality experience. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system, the Virtual Time Window, while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades HMD based parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the investigation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has already come to be used at such sites and the latter investigating the benefits and drawbacks to different approaches to parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further investigation into the parallel reality concept.
+Chapter \ref{chapter-background} surveys the ecosystem of alternate realities, including methods and taxonomies for classifying, categorising and distinguishing between different alternate reality terms, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-background} also introduces the combined Milgram/Waterworth model for illustrating parallel reality experience. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system, the Virtual Time Window, while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades HMD based parallel reality platform. Chapters \ref{chapter-eval-1} and \ref{chapter-eval-2} cover the investigation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against a more traditional scenario in which virtual reality has already come to be used at such sites and the latter investigating the benefits and drawbacks to different approaches toward parallel reality implementation, resulting in a set of best practice recommendations. Finally chapter \ref{chapter-conclusions} concludes the body of work and postulates on avenues for further investigation into the parallel reality concept.
 
 Table \ref{objectives} provides an overview of the sections of the thesis in which each objective is addressed, along with relevant publications listed in section \ref{collaborations-and-publications}.
 
