--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -20,9 +20,18 @@
 
 %\section{Introduction}
 
-The subject of this thesis is a new category of alternate reality that allows its user to observe and move around their real environment while at any moment switching their view to that of a complete, immersive, alternative virtual environment as seen from the equivalent vantage point. This combination of real and virtual environments, combined with maintained user mobility, is not fully encapsulated by any previously defined alternate reality terminology, thus it is necessary to explore this terminology in order to correctly frame this new concept in relation to them. The closest existing category is that of the cross reality paradigm; a cross reality system holds the distinction of two discrete environments, one real and one virtual, both complete unto themselves, however focusses on bidirectional exchange of information between the environments rather than a single user's visual engagement with them both.
+This chapter explores the ecosystem of alternate realities, studying models that have been introduced to define and distinguish between different categories of alternate reality, producing a well defined taxonomy of alternate reality terms and introducing a model for illustration of alternate reality experience. Parallel reality is introduced into this theoretical framework as a new category of alternate reality, as the combination of a real and a virtual environment in a manner that allows the user to freely switch between them wherever within them they may be is not fully encapsulated by any of the existing definitions.
 
-The new category of parallel reality is thus proposed to describe systems that combine complete real and virtual environments together in a manner that allows mobile, immersive visual exploration of them both in tandem, relating it and positioning it against previously explored alternate reality terminology.
+
+
+
+%The combination of real and virtual environments in this manner is not fully encapsulated by any previously defined alternate reality terminology, thus it was necessary to explore the ecosystem of alternate realities in order to correctly frame the introduction of a new category in relation to previously established models.
+
+%The closest existing label is that of cross reality, but where cross reality sought to address the vacancy problem by means of sensor and actuator infrastructure, allowing actions in one environment to manifest into the other, the concept introduced by this thesis instead adopts the approach of direct visual engagement with both constituent environments.
+
+
+
+
 
 %This research centres around the design, development and evaluation of a hardware and software platform which allows its user to observe and move around their Real World (RW) environment whilst wearing a wide field of view (FOV), stereoscopic 3D, Head Mounted Display (HMD) which allows them to alternatively view an immersive Virtual Reality (VR) environment from the equivalent vantage point. This is achieved by combining a head-tracked HMD, webcams, an indoor positioning system (IPS) and a 3D game engine, into a mobile \textit{cross reality} (XR) interface.
 
@@ -696,6 +705,6 @@ Parallel reality platforms are thus well suited to situations in which interacti
 \section{Summary}
 Decades of research into alternate realities has furnished us with a rich continuum of approaches and technologies for creating, combining, augmenting and diminishing real and virtual environments. Many of the alternate reality labels that are now becoming commonplace are concerned with presenting a different environment to the user's real surroundings (as in telepresence and virtual reality) or mixing additional information into the user's view of their real or virtual surroundings (as in augmented reality and augmented virtuality).
 
-Although less thoroughly investigated, the concept of creating an alternate reality system by combining two environments, one real and the other virtual and both complete unto themselves, into a cross reality system presents an interesting avenue for furthering alternate reality techniques and applications, in particular to addressing the vacancy problem that affects users when trying to distribute their attention between two environments. Previous cross reality research has focussed upon alleviating this vacancy problem by integrating sensor and actuator infrastructure into the constituent real and virtual environments of a system, such that actions and events in one environment could manifest into the other. However direct visual engagement with both environments was not often possible in these systems and only from predetermined, static locations.
+Although less thoroughly investigated, the concept of creating an alternate reality system by combining two complete environments, one real and the other virtual, into a cross reality system presents an interesting avenue for furthering alternate reality techniques and applications, in particular to addressing the vacancy problem that affects users when trying to distribute their attention between two environments. Previous cross reality research has focussed upon alleviating this vacancy problem by integrating sensor and actuator infrastructure into the constituent real and virtual environments of a system, such that actions and events in one environment could manifest into the other. However direct visual engagement with both environments was not often possible in these systems and only from predetermined, static locations.
 
-Parallel reality has been introduced as a new category of alternate reality that allows its user to visually engage with both a real and a virtual environment at any position, transitioning between them at any time. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept further addresses the vacancy problem by providing \textit{``the means to be in more than one place (reality) at a time''}\cite{Lifton2007a}.
+Parallel reality has been introduced as a new category of alternate reality that allows its user to visually engage with both a real and a virtual environment at any position, switching between them at any time. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept further addresses the vacancy problem by providing \textit{``the means to be in more than one place (reality) at a time''}\cite{Lifton2007a}.
