--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -10,7 +10,7 @@
 
 \label{chapter-vtw}
 
-This chapter presents the development of a preliminary parallel reality platform that combines a tablet computer, GPS, accelerometer and magnetometer with an OpenSim based virtual environment, to allow exploration of the real world ruins of a 14th century cathedral in tandem with a complete virtual reconstruction of it as it stood in its prime. Cultural heritage sites such as this cathedral are introduced as an ideal area for which parallel reality systems can be applied to beneficial effect and three use cases for parallel reality platforms in cultural heritage scenarios are described along a scale of increasing positional accuracy.
+This chapter recounts the development of the Virtual Time Window, a platform that endeavoured to explore the suitability of a familiar alternate reality modality of interaction, using a tablet computer, GPS, accelerometer and magnetometer in combination with a Second Life/OpenSim based virtual environment, for investigation into the parallel reality concept. Virtual heritage is introduced as a field with a history of successful applications of alternate reality technologies and to which parallel reality promises to be of further benefit. The Virtual Time Window platform was tested within such a scenario, being used to explore the ruins of a 14th century cathedral in tandem with a complete virtual reconstruction of it as it stood in its prime.
 
 %=========================================================================================================
 
