--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -9,7 +9,7 @@
 
 \label{chapter-mirrorshades}
 
-This chapter discusses the design and development of a parallel reality platform that combined a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras for video see-through, with an indoor positioning system (IPS). This platform allows its user to observe and move around their real environment while imbued with the ability to alternatively view a complete immersive VR environment from the equivalent vantage point. Development of this platform enabled investigation of parallel reality in a manner that fully realised the envisaged experiential aspect of wholly switching between immersive real and virtual environments. The use of higher performance position and orientation tracking promised to allow for the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place at closer ranges in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
+This chapter discusses the design and development of a parallel reality platform called Mirrorshades that combined a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras for video see-through, with an indoor positioning system (IPS), using the Unity game engine. This platform allows its user to observe and move around their real environment while imbued with the ability to alternatively view a complete immersive VR environment from the equivalent vantage point. Development of this platform enabled investigation of parallel reality in a manner that fully realised the envisaged experiential aspect of wholly switching between immersive real and virtual environments. The use of higher performance position and orientation tracking promised to allow for the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place at closer ranges in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
 
 %Previous XR research approached the vacancy problem by integrating sensor/actuator networks into the environments, such that actions in one could manifest in the other, however direct visual engagement with the virtual environment was only possible from static interfaces at pre-determined locations within the real environment~\cite{Lifton2007a, Dublon2011}. The platform discussed in this document addresses this shortcoming by providing a mobile interface for visual engagement with both environments of a XR system, allowing the user to transition between viewing their real environment and a virtual environment at any time while maintaining the freedom to move around them, multiplexing visual stimuli from their real surroundings and from a parallel, virtual `mirror world'~\cite{Gelernter1993}.
 
@@ -797,7 +797,7 @@ Testing then took place with members of the Open Virtual Worlds research group (
 %=========================================================================================================
 
 \section{Summary}
-This chapter has recounted the development of the Mirrorshades parallel reality platform, which combines the Oculus Rift DK1 VR HMD with the IndoorAtlas IPS. The greater positional accuracy of the IPS compared to the GPS solution used within the VTW project allows investigation into the freeform exploration scenario and aspects of the detailed comparison scenario. The immersive nature of the DK1, completely filling the user's FOV with mediated stereoscopic visuals, allows for investigation of the experiential aspect of switching wholly between complete and discrete real and virtual environments that was originally envisaged of the parallel reality concept. Four different styles of transition between real and virtual stimuli have been implemented and their expected user experience illustrated using the combined Milgram/Waterworth model.
+This chapter has recounted the development of the Mirrorshades parallel reality platform, which combines the Oculus Rift DK1 VR HMD with the IndoorAtlas IPS. The greater positional accuracy of the IPS compared to the GPS solution used within the VTW project allows investigation into the freeform exploration scenario and into aspects of the detailed comparison scenario. The immersive nature of the DK1, completely filling the user's FOV with mediated stereoscopic visuals, allows for investigation of the experiential aspect of switching wholly between complete and discrete real and virtual environments that was originally envisaged of the parallel reality concept but not realised by the VTW platform. Four different styles of transition between real and virtual stimuli were implemented and their expected user experience illustrated using the combined Milgram/Waterworth model.
 
 Latency measurements of the video see-through solution were performed and while higher than published best practices for VR experiences were not expected to be as detrimental to user experience in the style of interaction envisaged of the platform as they would in more traditional VR gaming scenarios. Initial testing of the platform was conducted, first within a department building and then within St Salvator's chapel, which was introduced as an ideal real world location at which to perform a user study of the Mirrorshades platform within the field of virtual heritage.
 
