--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -9,7 +9,7 @@
 
 \label{chapter-eval-1}
 
-The development of the Mirrorshades platform was driven both to investigate mobile parallel reality systems as a concept in general and to assess their suitability when applied to a particular case study as a new modality for interacting with VR content within the context of a cultural heritage site. For this purpose evaluation of the platform firstly addressed its reception compared to a seated VR cultural heritage experience before studying reactions and preferences toward different parallel reality implementations with regards to the default view and transition styles provided.
+This chapter recounts the first of two stages of evaluation conducted with the Mirrorshades platform, tasked with establishing the worth of the parallel reality concept in comparison to previously explored alternate reality techniques. To this end the platform was deployed to a user study in which a reconstruction of a 15th century chapel and its present day counterpart were explored by participants both via a seated VR experience, as VR content has already come to be employed at cultural heritage sites, and via a parallel reality experience using Mirrorshades.
 
 %=========================================================================================================
 
@@ -494,7 +494,7 @@ Additionally the positional and orientational accuracy were for the most part ev
 
 \section{Summary}
 
-This first stage of investigation directly compared a seated VR scenario, in which VR content has already begun to be used at cultural heritage sites, against the mobile style of interaction afforded by the Mirrorshades parallel reality platform which addresses both temporal and spatial separation between experience of real and virtual environments. The Mirrorshades platform has shown itself to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon seated VR techniques employed for the presentation of the same content by allowing immediate comparison and contrast between corresponding vantage points in both the RW and VR environments, successfully addressing the hindrance of on-site comparison of real and virtual environments inherent to stationary virtual experiences.
+This first stage of evaluation directly compared a seated VR scenario, in which VR content has already begun to be used at cultural heritage sites, against the mobile style of interaction afforded by the Mirrorshades parallel reality platform which addresses both temporal and spatial separation between experience of real and virtual environments. The Mirrorshades platform has shown itself to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon seated VR techniques employed for the presentation of the same content by allowing immediate comparison and contrast between corresponding vantage points in both the RW and VR environments, successfully addressing the hindrance of on-site comparison of real and virtual environments inherent to stationary virtual experiences.
 
 The accuracy of position and orientation data throughout the investigations was sufficient to fully realise the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} even in the confines of an indoor environment, and additionally accuracy was for the most part sufficient for the freeform exploration with detailed comparison scenario. The immersive nature of the visuals produced by the Oculus Rift DK1 HMD, completely filling the user's FOV with stimuli from its screen, allowed for the experiential aspect of switching between real and virtual environments envisaged by the parallel reality paradigm to be truly accomplished by these scenarios.
 
@@ -525,13 +525,13 @@ Log data show participants displaying restricted head movement throughout the pa
 
 \label{chapter-eval-2}
 
-The first stage of investigation with the Mirrorshades platform demonstrated that applying a parallel reality system to a cultural heritage scenario provides an experience that is both more enjoyable and more engaging than a seated virtual heritage scenario making use of immersive VR presentation via CAVE or HMD, and also leads participants to a greater understanding of the relationships between the RW and VR content presented to them. This chapter recounts investigations into how certain aspects of the Mirrorshades platform affect the overall experience of parallel reality and the findings are used to establish a set of best practices for informing future parallel reality implementations. These investigations explored the way that transitions between RW and VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW and VR, aspects identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct effect upon the severity of the break in presence experienced when performing these transitions.
+This chapter recounts the second stage of evaluation conducted with the Mirrorshades platform, in which the focus was upon investigating how certain aspects of the platform's implementation affected the overall parallel reality experience. A first user study compared between different manners of switching between RW and VR visual stimuli, while a second investigated changes to the default view. The results of these studies were used to establish a set of best practices for future parallel reality endeavours.
 
 %=========================================================================================================
 
 \section{Overview}
 
-Stage 2 of the investigation comprised two parts. The first, stage 2.1, focussed upon assessing participants' reactions and preferences toward four different transition styles (the first aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). The second, stage 2.2, looked at reactions and preferences in response to two different default views comprising RW/VR mixes (the second aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). In terms of the combined Milgram/Waterworh model these investigations pertain to assessing the effect upon participants' focus of attention (the severity of the break in presence) when performing oscillations along the locus of attention axis. Stage 2.1 investigated oscillations wherein the default view was 100\% RW, with participants performing oscillations between the RW extreme of the locus of attention axis and other points upon the it (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looked at oscillations wherein the default view was a mix of RW and VR, limiting how far toward the RW extreme of the locus axis the participant could reach (such as in figure \ref{transition-mix-vr.png}).
+Stage 2 of the evaluation comprised two parts. The first, stage 2.1, focussed upon assessing participants' reactions and preferences toward four different transition styles (the first aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). The second, stage 2.2, looked at reactions and preferences in response to two different default views comprising RW/VR mixes (the second aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). In terms of the combined Milgram/Waterworh model these investigations pertain to assessing the effect upon participants' focus of attention (the severity of the break in presence) when performing oscillations along the locus of attention axis. Stage 2.1 investigated oscillations wherein the default view was 100\% RW, with participants performing oscillations between the RW extreme of the locus of attention axis and other points upon the it (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looked at oscillations wherein the default view was a mix of RW and VR, limiting how far toward the RW extreme of the locus axis the participant could reach (such as in figure \ref{transition-mix-vr.png}).
 
 While stage 1 of the investigation saw the suitability of applying a parallel reality platform to the particular use case of virtual heritage, stage 2 while still making use of the same virtual heritage scenario has wider ranging implications for informing implementation of parallel reality systems in general.
 
